# mcoplib

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  setup.py
benchmark/: README.md  fused_add_rms_norm_nvbench.py  fused_add_rms_norm_simple.py  run_all_vllm_benchmarks.py  vllm_extended_benchmark.py  vllm_ops_benchmark.py
include/: fused_moe_gate_opt.h
kernel/: fused_moe_gate.cuh
mxbench/: CMakeLists.txt  README_MXBENCH.md  env.sh
mxbench/install/include/nvbench/: config.cuh  device_info.cuh
mxbench/install/include/nvbench/detail/: git_revision.cuh  version.cuh
mxbench/install/lib/cmake/nvbench/: nvbench-CUDA-language.cmake  nvbench-CXX-language.cmake  nvbench-config-version.cmake  nvbench-config.cmake  nvbench-dependencies.cmake  nvbench-targets-release.cmake  nvbench-targets.cmake
mxbench/python/: CMakeLists.txt  pyproject.toml  setup.py
mxbench/python/cuda/bench/: __init__.py
mxbench/python/src/: py_nvbench.cpp
op/: moe_fused_gate_opt.cu  pybind.cpp
op/sglang/csrc/: common_extension.cc
op/sglang/csrc/moe/: fused_qknorm_rope_kernel.cu  kimi_k2_moe_fused_gate.cu  moe_topk_softmax_kernels.cu
op/sglang/csrc/moe/cutlass_moe/w4a8/: w4a8_grouped_mm_c3x.cu  w4a8_moe_data.cu
op/sglang/csrc/quantization/gguf/: gguf_kernel.cu
op/sglang/include/: sgl_kernel_ops.h
op/vllm/: activation_kernels.cu  cache.h  cache_kernels.cu  cuda_compat.h  cuda_utils.h  cuda_utils_kernels.cu  cumem_allocator.cpp  layernorm_kernels.cu  layernorm_quant_kernels.cu  ops.h  sampler.cu  torch_bindings.cpp  type_convert.cuh
op/vllm/attention/: attention_kernels.cuh  dtype_bfloat16.cuh  dtype_float16.cuh  dtype_fp8.cuh  paged_attention_v1.cu  paged_attention_v2.cu
op/vllm/cutlass_extensions/: common.hpp
op/vllm/mamba/mamba_ssm/: selective_scan.h  selective_scan_fwd.cu
op/vllm/moe/: grouped_topk_kernels.cu  moe_align_sum_kernels.cu  moe_lora_align_sum_kernels.cu  moe_ops.cpp  moe_ops.h  moe_permute_unpermute_op.cu  torch_bindings.cpp
op/vllm/quantization/: utils.cuh
op/vllm/quantization/awq/: Hgemm_nn_128x32x128_8m1n8k_awq.hpp  awq_4bits.cuh  dequant.cuh  dequantize.cuh  gemm_kernels.cu  hgemv_nn_splitk_awq.hpp
op/vllm/quantization/compressed_tensors/: int8_quant_kernels.cu
op/vllm/quantization/cutlass_w8a8/: scaled_mm_c2x.cu  scaled_mm_c2x.cuh  scaled_mm_entry.cu
op/vllm/quantization/fp4/: nvfp4_quant_entry.cu  nvfp4_scaled_mm_entry.cu
op/vllm/quantization/fp8/: common.cu  common.cuh
op/vllm/quantization/fp8/metax/: quant_utils.cuh
op/vllm/quantization/fused_kernels/: layernorm_utils.cuh  quant_conversions.cuh
op/vllm/quantization/gguf/: ggml-common.h  mmq.cuh  moe.cuh  vecdotq.cuh
op/vllm/quantization/gptq/: Hgemm_common.cuh  Hgemm_nn_128x32x128_8m1n8k_gptq-4bits.hpp  Hgemm_nn_128x32x128_8m1n8k_gptq-8bits.hpp  dequant.cuh  gptq.cuh  hgemm_gptq.h  hgemv_nn_splitk_gptq.hpp  hgemv_nn_splitk_gptq_int8.hpp  hgemv_selector.hpp  q_gemm.cu  qdq_4.cuh  scalar_type.hpp
op/vllm/sparse/cutlass/: sparse_scaled_mm_entry.cu
